Add part of the zmq bindings

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "enchannel-zmq-backend": "^1.0.1",
     "express": "^4.13.4",
     "node-uuid": "^1.4.7",
+    "socket.io": "^1.4.5",
     "spawnteract": "^1.0.2"
   }
 }
