--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/nteract/kernel-relay#readme",
   "dependencies": {
     "chalk": "^1.1.1",
-    "enchannel-zmq-backend": "^1.0.1",
+    "enchannel": "^1.1.0",
+    "enchannel-zmq-backend": "^1.1.0",
     "express": "^4.13.4",
     "node-uuid": "^1.4.7",
     "socket.io": "^1.4.5",
