--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "enchannel": "^1.1.2",
     "enchannel-zmq-backend": "^1.1.0",
     "express": "^4.13.4",
-    "node-uuid": "^1.4.7",
+    "uuid": "^2.0.2",
     "socket.io": "^1.4.5",
     "spawnteract": "^1.0.2"
   },
